refactor: huge amount of conversion to chimericlib